fixed layout issues

--- a/grids.css
+++ b/grids.css
@@ -6,6 +6,7 @@ header {
 }
 nav {
     grid-area: n;
+    margin-left: 0;
 }
 main {
     grid-area: m;
@@ -13,6 +14,7 @@ main {
 }
 aside {
     grid-area: a;
+    margin: 15px
 }
 footer {
     grid-area: f;
@@ -88,10 +90,10 @@ nav a:visited {
 }
 .text-heading {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.5em;
+    font-size: 2.5em;
     text-align: center;
     border: 3px solid black;
-    border-radius: 5em;
+    border-radius: 10em;
     background-color: #009000;
     background-image: url(textbackground3.jpg);
     color: whitesmoke;
@@ -100,7 +102,7 @@ nav a:visited {
 }
 .text {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.1em;
+    font-size: 1.3em;
     text-align:center;
     background-color: #009000;
     background-image: url(textbackground3.jpg);
@@ -121,12 +123,12 @@ footer {
 }
 aside {
     border: 3px solid;
-    margin-bottom: 5px;
+    margin-bottom: 50px;
     background-image: url(asidebackground.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
-@media (min-width: 320px){
+@media (min-width: 300px){
     #wrapper {
         grid-template:
          "h"
@@ -167,7 +169,7 @@ aside {
     nav ul {
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: flex-start;
         text-align: center;
         margin-left: 0;
         font-size: large;
